--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,42 @@
+appdirs==1.4.3
+astroid==2.3.3
+attrs==19.3.0
+bcrypt==3.1.7
+cffi==1.14.0
 Click==7.0
+cryptography==2.9
+distlib==0.3.0
+entrypoints==0.3
+filelock==3.0.12
+flake8==3.7.9
+importlib-metadata==1.6.0
+isort==4.3.21
 Jinja2==2.11.1
-pylint==2.4.4
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.2.0
 mypy==0.770
 mypy-extensions==0.4.3
-flake8==3.7.9
-tox==3.14.6
-pytest==5.4.1
+packaging==20.3
+paramiko==2.7.1
 pbr==5.4.4
+pluggy==0.13.1
+py==1.8.1
+pycodestyle==2.5.0
+pycparser==2.20
+pyflakes==2.1.1
+pylint==2.4.4
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pytest==5.4.1
+scp==0.13.2
+six==1.14.0
+toml==0.10.0
+tox==3.14.6
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+virtualenv==20.0.15
+wcwidth==0.1.9
+wrapt==1.11.2
+zipp==3.1.0
