--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
     Intended Audience :: Developers :: Scientists
     Natural Language :: English
     Programming Language :: Python :: 3.7
-keywords = qassembler
+keywords = qommunicator
 
 [files]
 packages =
@@ -31,3 +31,7 @@ exclude = docs
 
 [tool:pytest]
 collect_ignore = ['setup.py']
+
+[options.entry_points]
+console_scripts =
+    qcli = qommunicator.qommunicator:main
